--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   DOCKERHUB_USERNAME: jocamposar #usuario DockerHub
-  DOCKERHUB_REPO:   fullStack2-front     #repo DockerHub
+  DOCKERHUB_REPO:   fullStack2Front     #repo DockerHub
 
 jobs:
   build:
