--- a/config/config.json
+++ b/config/config.json
@@ -5,13 +5,7 @@
     "database": "fullStack",
     "host": "db",
     "port": 5432,
-    "dialect": "postgres",
-    "dialectOptions": {
-        "ssl": {
-            "require": true,
-            "rejectUnauthorized": false
-        }
-    }
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
