--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,17 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "fullStack",
-    "host": "db",
+    "username": "neondb_owner",
+    "password": "npg_8VrojQnltf1U",
+    "database": "neondb",
+    "host": "ep-broad-feather-a4id4i50-pooler.us-east-1.aws.neon.tech",
     "port": 5432,
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "dialectOptions": {
+        "ssl": {
+            "require": true,
+            "rejectUnauthorized": false
+        }
+    }
   },
   "test": {
     "username": "root",
